hphp/test/zend/bad/ext/tokenizer/tests/bug60097.php
<?php

var_dump(token_get_all('<?php
<<<DOC1
{$s(<<<DOC2
DOC2
)}
DOC1;
'));

?>
